<resources>
	<string name="app_name">MoneySave</string>
	<string name="requestPermission">درخواست مجوز</string>
	<string name="messagePermission">برای دسترسی به پیام ها باید مجوز را تایید کنید </string>
	<string name="acceptRequest">موافقم</string>
	<string name="ignoreRequest">لغو</string>
	<string name="title_account_name">AccountName</string>
	<string name="AccountNumber">AccountNumber</string>
	<string name="CardNumber">CardNumber</string>
	<string name="Next">Next</string>
	<string name="money_save">Money Save</string>
	<string name="title_new_account">NEW ACCOUNT</string>
	<string name="title_credit">Your account credit card number.</string>
	<string name="title_name_card">Name of the card,for example saving account.</string>
	<string name="title_bank_account_number">Your bank account number.</string>
	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="title_color">COLOR</string>
	<string name="title_design">DESIGN</string>
	<string name="action_create">CREATE</string>
	<string name="title_cardDesign">Card Design</string>
	<string name="title_balance">Balance</string>
	<string name="title_cardNumber">.... .... .... 1384</string>
	<string name="balance">T 7,539,800</string>
	<string name="cvv2Title">cvv2 your card.</string>
	<string name="year">Year</string>
	<string name="month">Month</string>
	<string name="slash">/</string>
	<string name="expire">Expire</string>
	<string name="expire_date">Expire date of your card.</string>
	<string name="ccv2">CVV2</string>
	
	//error analyzer
	<string name="wrong_answer_from_server">پاسخ اشتباه از سرور</string>
	<string name="no_response">پاسخی دریافت نشد</string>
	<string name="empty_error">پاسخ خالی از سرور</string>
	<string name="error_connecting_to_server">خطا در اتصال به سرور</string>
	<string name="error_check_Internet_connection">خطا، اتصال اینترنت را چک کنید</string>
	<string name="authorization_error">خطا در احراز هویت</string>
	<string name="http_error_code">خطای %d</string>
</resources>
