<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@drawable/header_color_background"
		tools:context=".presenter.ui.addEditCardFragment.AddEditCardFragment">
	
	<TextView
			android:id="@+id/titleTextView"
			android:layout_width="match_parent"
			android:layout_height="74dp"
			android:gravity="center"
			android:text="@string/money_save"
			android:textColor="@color/color_white"
			android:textSize="17sp"
			android:textStyle="bold"
			app:layout_constraintBottom_toTopOf="@+id/addAccountLayout"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_bias="0.060000002" />
	
	
	<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/addAccountLayout"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_marginTop="64dp"
			android:background="@drawable/rounded_background"
			android:gravity="center_horizontal"
			android:orientation="vertical"
			android:paddingStart="30dp"
			android:paddingEnd="30dp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.57"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="@+id/titleTextView">
		
		<TextView
				android:id="@+id/textView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:text="@string/title_new_account"
				android:textColor="@color/dark"
				android:textSize="14sp"
				android:textStyle="bold"
				app:layout_constraintBottom_toTopOf="@+id/cardView"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintVertical_bias="0.23000002" />
		
		<androidx.cardview.widget.CardView
				android:id="@+id/cardView"
				android:layout_width="320dp"
				android:layout_height="166dp"
				app:cardBackgroundColor="@color/color_cardBlack"
				app:cardCornerRadius="25dp"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintVertical_bias="0.18" />
		
		<ir.siriusapps.moneysave.customView.GradientBlurLayout
				android:id="@+id/gradientBlurLayout"
				android:layout_width="320dp"
				android:layout_height="166dp"
				app:gbl_angle="45"
				app:gbl_blurRadius="20dp"
				app:gbl_endColor="@color/color_cardBlack"
				app:gbl_radius="10dp"
				app:gbl_startColor="@color/color_cardBlack"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.11"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="@+id/textView"
				app:layout_constraintVertical_bias="0.19" />
		
		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/title_color"
				android:textColor="@color/grayText"
				android:textSize="17sp"
				android:textStyle="bold"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.0"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintVertical_bias="0.43" />
		
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:orientation="horizontal"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/gradientBlurLayout"
				app:layout_constraintVertical_bias="0.16000003">
			
			<ir.siriusapps.moneysave.customView.GradientButton
					android:layout_width="28dp"
					android:layout_height="28dp"
					android:layout_marginEnd="16dp"
					app:gb_Color="@color/color_black"
					app:gb_radius="-1dp" />
			
			<ir.siriusapps.moneysave.customView.GradientButton
					android:layout_width="28dp"
					android:layout_height="28dp"
					android:layout_marginEnd="16dp"
					app:gb_Color="@color/color_yellow"
					app:gb_radius="-1dp" />
			
			<ir.siriusapps.moneysave.customView.GradientButton
					android:layout_width="28dp"
					android:layout_height="28dp"
					android:layout_marginEnd="16dp"
					app:gb_Color="@color/color_gray"
					app:gb_radius="-1dp" />
			
			<ir.siriusapps.moneysave.customView.GradientButton
					android:layout_width="28dp"
					android:layout_height="28dp"
					android:layout_marginEnd="16dp"
					app:gb_Color="@color/color_Green"
					app:gb_radius="-1dp" />
			
			<ir.siriusapps.moneysave.customView.GradientButton
					android:layout_width="28dp"
					android:layout_height="28dp"
					android:layout_marginEnd="16dp"
					app:gb_Color="@color/color_blue"
					app:gb_radius="-1dp" />
			
			<ir.siriusapps.moneysave.customView.GradientButton
					android:layout_width="28dp"
					android:layout_height="28dp"
					android:layout_marginEnd="16dp"
					app:gb_Color="@color/color_purple"
					app:gb_radius="-1dp" />
			
			<ir.siriusapps.moneysave.customView.GradientButton
					android:layout_width="28dp"
					android:layout_height="28dp"
					android:layout_marginEnd="16dp"
					app:gb_Color="@color/color_pink"
					app:gb_radius="-1dp" />
		</LinearLayout>
		
		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/title_design"
				android:textColor="@color/grayText"
				android:textSize="17sp"
				android:textStyle="bold"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.0"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintVertical_bias="0.6" />
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/gradientBlurLayout"
				>
			
		</LinearLayout>
	</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>